# AlgoTradeKit

./: CHANGELOG.md  LICENSE  MT5_WINE_SETUP.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/AlgoTradeKit/: __init__.py
src/AlgoTradeKit/broker/: __init__.py  _errors.py  _stream.py  _timeutil.py  _types.py  base.py
src/AlgoTradeKit/broker/exchange/: __init__.py
src/AlgoTradeKit/broker/exchange/binance/: __init__.py  _client.py  _endpoints.py  _rest.py  _ws.py
src/AlgoTradeKit/broker/metatrader/: __init__.py  _bridge_client.py  _client.py  bridge_server.py
src/AlgoTradeKit/data/: __init__.py  _utils.py  collector.py  converter.py  normalizer.py
src/AlgoTradeKit/data/sources/: __init__.py  base.py  binance.py
src/AlgoTradeKit/data/storage/: __init__.py  csv_handler.py
src/AlgoTradeKit/indicator/: __init__.py  _base.py  atr.py  ichimoku.py  ma.py  macd.py  rsi.py
src/AlgoTradeKit/report/: __init__.py  _builder.py  _display.py  _server.py
src/AlgoTradeKit/report/static/: report.html
src/AlgoTradeKit/simulate/: __init__.py  _config.py  _engine.py  _lot.py  _position.py  _report.py  _runner.py  _session.py
src/AlgoTradeKit/strategy/: __init__.py  _base.py  _types.py
src/AlgoTradeKit/strategy/builtin/: __init__.py  macd.py
src/AlgoTradeKit/visual/: __init__.py  chart.py  indicator_renderer.py  models.py  server.py
src/AlgoTradeKit/visual/static/: index.html
tests/: test_broker.py  test_data.py  test_data_converter.py  test_data_normalizer.py  test_indicator.py  test_report.py  test_simulate.py  test_strategy.py  test_visual.py  test_visual__0_4_1.py
